fix: report event and new scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,19 @@ body {
   line-height: 1;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-orange);
+  border-radius: 10px;
+}
+
 img {
   width: 100%;
 }
